[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://PropertyPowerUp.gd" type="Script" id=2]
[ext_resource path="res://sound/sheet-em-up-power-up.wav" type="AudioStream" id=3]
[ext_resource path="res://PropertyOptionButton.gd" type="Script" id=4]
[ext_resource path="res://OperatorOptionButton.gd" type="Script" id=5]
[ext_resource path="res://ValueOptionButton.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 11.8749, 29.2161 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 9.84091 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 3.25934 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 560.271, 10 )

[sub_resource type="Animation" id=5]

resource_name = "Elevator"
length = 10.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Elevator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80.7861, 442.353 ), Vector2( 80.7861, 57.3531 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PropertyPowerUp/CollisionShape2D/ColorRect:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.18457, 0.595528, 0.738281, 1 ), Color( 0.0978394, 0.240995, 0.894531, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 24.6076, 2.65692 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 16.0784, 15.3523 )

[sub_resource type="Animation" id=8]

resource_name = "PowerUp"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.171753, 0.529113, 0.65625, 1 ), Color( 0.376892, 0.64633, 0.742188, 1 ) ]
}

[sub_resource type="Animation" id=9]

resource_name = "PowerUp"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 30 ), Vector2( 55, 52 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D/ColorRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -15, -14 ), Vector2( -27, -25 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}

[node name="Root" type="Node" index="0"]

[node name="Playfield" type="Node" parent="." index="0"]

[node name="Player" type="KinematicBody2D" parent="Playfield" index="0"]

editor/display_folded = true
position = Vector2( 509.754, 270.302 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/Player" index="0"]

editor/display_folded = true
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Playfield/Player/CollisionShape2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -11.0
margin_top = -29.0
margin_right = 11.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Rect" ]

[node name="Camera2D" type="Camera2D" parent="Playfield/Player" index="1"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = 0
limit_top = 0
limit_right = 1020
limit_bottom = 600
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = true
editor_draw_drag_margin = false
_sections_unfolded = [ "Editor", "Limit", "Smoothing" ]

[node name="TallObstacle" type="StaticBody2D" parent="Playfield" index="1"]

editor/display_folded = true
position = Vector2( 248.298, 435.514 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/TallObstacle" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="ColorRect" type="ColorRect" parent="Playfield/TallObstacle/CollisionShape2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -10.0
margin_top = -10.0
margin_right = 11.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.566406, 0.566406, 0.566406, 1 )

[node name="ShortObstacle" type="StaticBody2D" parent="Playfield" index="2"]

editor/display_folded = true
position = Vector2( 406.709, 441.642 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape3" type="CollisionShape2D" parent="Playfield/ShortObstacle" index="0"]

shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="ColorRect" type="ColorRect" parent="Playfield/ShortObstacle/CollisionShape3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -10.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.566406, 0.566406, 0.566406, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Playfield" index="3"]

editor/display_folded = true
position = Vector2( 495.693, 455.037 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/StaticBody2D" index="0"]

shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="ColorRect" type="ColorRect" parent="Playfield/StaticBody2D/CollisionShape2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -512.0
margin_top = -10.0
margin_right = 542.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.261719, 0.20549, 0.20549, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Playfield" index="4"]

root_node = NodePath("..")
autoplay = "Elevator"
playback_process_mode = 0
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Elevator = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Elevator" type="KinematicBody2D" parent="Playfield/AnimationPlayer" index="0"]

editor/display_folded = true
position = Vector2( 80.7861, 100.992 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/AnimationPlayer/Elevator" index="0"]

shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Playfield/AnimationPlayer/Elevator/CollisionShape2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -24.0
margin_top = -3.0
margin_right = 25.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.519531, 0.401825, 0.401825, 1 )

[node name="PropertyPowerUp" type="Area2D" parent="Playfield" index="5"]

position = Vector2( 712.418, 429.38 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.0
angular_damp = 0.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/PropertyPowerUp" index="0"]

shape = SubResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Playfield/PropertyPowerUp/CollisionShape2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -15.0
margin_top = -14.0
margin_right = 17.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.171753, 0.529113, 0.65625, 1 )
_sections_unfolded = [ "Rect" ]

[node name="Label" type="Label" parent="Playfield/PropertyPowerUp/CollisionShape2D/ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "JY"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PowerUpColourAnim" type="AnimationPlayer" parent="Playfield/PropertyPowerUp" index="1"]

root_node = NodePath("..")
autoplay = "PowerUp"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/PowerUp = SubResource( 8 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Playfield/PropertyPowerUp" index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "FX"

[node name="PowerUpPickUpAnim" type="AnimationPlayer" parent="Playfield/PropertyPowerUp" index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/PowerUp = SubResource( 9 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="SpreadsheetContainer" type="Container" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 468.0
margin_right = 1022.0
margin_bottom = 601.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Visibility" ]

[node name="ColorRect" type="ColorRect" parent="SpreadsheetContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = -1.0
margin_right = 1025.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.527344, 0.527344, 0.527344, 1 )

[node name="GridContainer" type="GridContainer" parent="SpreadsheetContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 3

[node name="PropertyOptionButton" type="OptionButton" parent="SpreadsheetContainer/GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 39.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
script = ExtResource( 4 )

[node name="OperatorOptionButton" type="OptionButton" parent="SpreadsheetContainer/GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_right = 82.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
script = ExtResource( 5 )

[node name="ValueOptionButton" type="OptionButton" parent="SpreadsheetContainer/GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 86.0
margin_right = 125.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
script = ExtResource( 6 )

[connection signal="body_entered" from="Playfield/PropertyPowerUp" to="Playfield/PropertyPowerUp" method="_on_PropertyPowerUp_body_entered"]

[connection signal="animation_finished" from="Playfield/PropertyPowerUp/PowerUpPickUpAnim" to="Playfield/PropertyPowerUp" method="_on_PowerUpPickUpAnim_animation_finished"]


